Fix problems with spaces in path on mac machines